removing header and adding correct title into fieldset for the tcsp service provider types page.

--- a/app/views/tcsp/ServiceProviderTypesView.scala.html
+++ b/app/views/tcsp/ServiceProviderTypesView.scala.html
@@ -39,15 +39,13 @@
 
     @subtitle("summary.tcsp")
 
-    @heading("tcsp.kind.of.service.provider.title")
-
     @formHelper(action = controllers.tcsp.routes.TcspTypesController.post(edit)) {
 
         @inputCheckbox(
             Checkboxes(
                 fieldset = Some(Fieldset(
                     legend = Some(Legend(
-                        content = Text(messages("renewal.msb.money_sources.header")),
+                        content = Text(messages("tcsp.kind.of.service.provider.title")),
                         classes = "govuk-fieldset__legend--xl",
                         isPageHeading = true
                     ))
