To ensure the HowCashPaymentsReceivedView.scala.html page has the correct spacing between the page text and the fieldset it has required using the visually hidden class within the fieldset.

--- a/app/views/renewal/HowCashPaymentsReceivedView.scala.html
+++ b/app/views/renewal/HowCashPaymentsReceivedView.scala.html
@@ -57,14 +57,16 @@
 
     @heading("renewal.cash.payments.received.title")
 
+    <p class="govuk-body">@messages("renewal.cash.payments.received.text")</p>
+
     @formHelper(action = controllers.renewal.routes.HowCashPaymentsReceivedController.post(edit)) {
 
         @inputCheckbox(
             Checkboxes(
                     fieldset = Some(Fieldset(
                         legend = Some(Legend(
-                            content = Text(messages("renewal.cash.payments.received.text")),
-                            classes = "govuk-body",
+                            content = Text(messages("renewal.cash.payments.received.title")),
+                            classes = "govuk-visually-hidden",
                             isPageHeading = false
                     ))
                 )),
