Adding a fieldset to checkboxes on the add person and expect to receive screens.

--- a/app/views/declaration/AddPersonView.scala.html
+++ b/app/views/declaration/AddPersonView.scala.html
@@ -121,11 +121,14 @@
 
         @inputCheckbox(
             Checkboxes(
-                hint = Some(
-                    Hint(
-                        content = Text(messages("lbl.select.all"))
-                    )
-                ),
+                fieldset = Some(Fieldset(
+                    legend = Some(Legend(
+                        content = Text(messages("responsiblepeople.position_within_business.h2")),
+                        classes = "govuk-visually-hidden",
+                        isPageHeading = false
+                    ))
+                )),
+                hint = Some(Hint(content = Text(messages("lbl.select.all")))),
                 name = "positions",
                 items = RoleWithinBusinessRelease7.formValues(businessType, conditionalHtml)
             ).withFormField(form("positions"))
