Adjusted input field width to full width of service

--- a/app/views/businessdetails/BusinessEmailAddressView.scala.html
+++ b/app/views/businessdetails/BusinessEmailAddressView.scala.html
@@ -51,7 +51,7 @@
                 label = Label(
                     content = Text(messages("businessdetails.contactingyou.email.lbl"))
                 ),
-                classes = "govuk-!-width-one-half",
+                classes = "govuk-!-width-full",
                 attributes = Map(
                     "autocomplete" -> "work email",
                     "spellcheck" -> "false"
