DDCYLS-4675 | Stop confirm form resubmission notice

--- a/app/views/Layout.scala.html
+++ b/app/views/Layout.scala.html
@@ -75,6 +75,7 @@
     <script @CSPNonce.attr>window.HMRCFrontend.initAll()</script>
     @autocompleteJavascript()
     <script @CSPNonce.attr src='@controllers.routes.Assets.versioned("submitButtonDisable.js")'></script>
+    <script @CSPNonce.attr src='@controllers.routes.Assets.versioned("blockFormResubmission.js")'></script>
 }
 
 @mainContentWithGetHelp = {
