moved fullstop outside hyperlink for 'deregister your business'

--- a/app/views/status/components/WithdrawOrDeregisterInformation.scala.html
+++ b/app/views/status/components/WithdrawOrDeregisterInformation.scala.html
@@ -42,10 +42,10 @@
             <p class="govuk-body no-print">
                 @messages("your.registration.deregister")
                 @anchor(
-                    s"${messages("your.registration.deregister.link")}.",
+                    s"${messages("your.registration.deregister.link")}",
                     controllers.deregister.routes.DeRegisterApplicationController.get.url,
                     "deregister-link"
-                )
+                ).
             </p>
         </div>
     }
