--- a/app/views/status/components/WithdrawOrDeregisterInformation.scala.html
+++ b/app/views/status/components/WithdrawOrDeregisterInformation.scala.html
@@ -30,10 +30,10 @@
             <p class="govuk-body no-print">
                 @messages("your.registration.withdraw")
                 @anchor(
-                    s"${messages("status.withdraw.link-text")}.",
+                    s"${messages("status.withdraw.link-text")}",
                     controllers.withdrawal.routes.WithdrawApplicationController.get.url,
                     "withdraw-application"
-                )
+                ).
             </p>
         </div>
     }
