move . for contact HMRC

--- a/app/views/status/YourRegistrationView.scala.html
+++ b/app/views/status/YourRegistrationView.scala.html
@@ -105,10 +105,10 @@
                 <p class="govuk-body">
                     @messages("status.submissionreadyforreview.description.5")
                     @anchor(
-                        s"${messages("status.submissionreadyforreview.description.5.link")}.",
+                        s"${messages("status.submissionreadyforreview.description.5.link")}",
                         appConfig.contactHmrcLink,
                         "contact-link"
-                    )
+                    ).
                 </p>
             </div>
         </div>
