moved . from supervisory body

--- a/app/views/status/components/ApplicationDeregistered.scala.html
+++ b/app/views/status/components/ApplicationDeregistered.scala.html
@@ -27,12 +27,12 @@
 
 <p class="govuk-body" id="application-deregistered-description-1">@messages("your.registration.status.deregistered.line1")</p>
 <p class="govuk-body" id="application-deregistered-description-2">
-    @messages("your.registration.status.withdrawn.line2")
+    @messages("yoderegister your businessur.registration.status.withdrawn.line2")
     @anchor(
-        s"${messages("your.registration.status.withdrawn.label1")}.",
+        s"${messages("your.registration.status.withdrawn.label1")}",
         appConfig.applicationWhoNeedsToRegisterLink,
         "who-needs-to-register"
-    )
+    ).
 </p>
 <p class="govuk-body" id="application-deregistered-description-3">@messages("your.registration.status.withdrawn.line3")</p>
 
