--- a/app/views/status/components/ApplicationWithdrawn.scala.html
+++ b/app/views/status/components/ApplicationWithdrawn.scala.html
@@ -29,10 +29,10 @@
 <p class="govuk-body" id="application-withdrawn-description-2">
     @messages("your.registration.status.withdrawn.line2")
     @anchor(
-        s"${messages("your.registration.status.withdrawn.label1")}.",
+        s"${messages("your.registration.status.withdrawn.label1")}",
         appConfig.applicationWhoNeedsToRegisterLink,
         "who-needs-to-register"
-    )
+    ).
 </p>
 <p class="govuk-body" id="application-withdrawn-description-3">@messages("your.registration.status.withdrawn.line3")</p>
 
