moved . outside hyperlink

--- a/app/views/applicationstatus/HowToPayView.scala.html
+++ b/app/views/applicationstatus/HowToPayView.scala.html
@@ -39,7 +39,7 @@
             @anchor("howtopay.para.2.link", routes.NotificationController.getMessages().url, "your-messages")
             @messages("howtopay.para.2.b")
         } else {
-            @anchor("howtopay.para.2.link.end", routes.NotificationController.getMessages().url, "your-messages")
+            @anchor("howtopay.para.2.link.end", routes.NotificationController.getMessages().url, "your-messages").
         }
     </p>
     @if(paymentReference.isDefined) {
