--- a/app/views/status/components/ApplicationDeregistered.scala.html
+++ b/app/views/status/components/ApplicationDeregistered.scala.html
@@ -27,7 +27,7 @@
 
 <p class="govuk-body" id="application-deregistered-description-1">@messages("your.registration.status.deregistered.line1")</p>
 <p class="govuk-body" id="application-deregistered-description-2">
-    @messages("yoderegister your businessur.registration.status.withdrawn.line2")
+    @messages("your.registration.status.withdrawn.line2")
     @anchor(
         s"${messages("your.registration.status.withdrawn.label1")}",
         appConfig.applicationWhoNeedsToRegisterLink,
