--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,14 @@ $govuk-assets-path: "/agent/assets/lib/govuk-frontend/dist/govuk/assets/";
   width: 25%
 }
 
+.background-grey {
+    height: 200px;
+    background-color: #f3f2f1;
+    padding: 15px;
+    margin-bottom:10px;
+
+}
+
 div.currencies-autocomplete-wrapper > div.govuk-form-group > div > div.autocomplete__wrapper > span > input.autocomplete__hint {
   width: 25%
 }
