--- a/app/views/status/YourRegistrationView.scala.html
+++ b/app/views/status/YourRegistrationView.scala.html
@@ -72,7 +72,7 @@
             }
         }
         </div>
-        <div id="registration-status" class="govuk-grid-column-one-third">Deregister your business
+        <div id="registration-status" class="govuk-grid-column-one-third">
             <h2 class="govuk-heading-s">@messages("your.registration.status")</h2>
             @registrationStatus
         </div>
