--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,18 +21,27 @@ $govuk-assets-path: "/agent/assets/lib/govuk-frontend/dist/govuk/assets/";
   width: 25%
 }
 
+div.currencies-autocomplete-wrapper > div.govuk-form-group > div > div.autocomplete__wrapper > span > input.autocomplete__hint {
+  width: 25%
+}
+
 .background-grey {
-    min-height: 310px;
+    min-height: 200px;
     background-color: #f3f2f1;
+    display: flex;
+    flex-direction: column;
+
 }
 
 @media (min-width: 641px) {
+    .govuk-grid-row {
+        display: flex;
+    }
+
+    .govuk-grid-column-one-third {
+        flex: 1;
+    }
     .border-white {
         border-right: 20px solid white;
     }
-}
-
-
-div.currencies-autocomplete-wrapper > div.govuk-form-group > div > div.autocomplete__wrapper > span > input.autocomplete__hint {
-  width: 25%
 }
