changed css class name to a more relevant name

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,7 +25,7 @@ div.currencies-autocomplete-wrapper > div.govuk-form-group > div > div.autocompl
   width: 25%
 }
 
-.background-grey {
+.registration-background-grey {
     background-color: #f3f2f1;
     display: flex;
     flex-direction: column;
