--- a/app/views/responsiblepeople/CountryOfBirthView.scala.html
+++ b/app/views/responsiblepeople/CountryOfBirthView.scala.html
@@ -17,6 +17,7 @@
 @import views.html.components.{Button, Heading, SectionSubtitle, ReturnLink}
 @import views.html.components.forms.{ErrorSummary, InputYesNo, InputCountry}
 @import uk.gov.hmrc.govukfrontend.views.Implicits.RichRadios
+@import views.html.helper.CSPNonce
 @import uk.gov.hmrc.govukfrontend.views.html.components.implicits._
 @import uk.gov.hmrc.hmrcfrontend.views.config.HmrcYesNoRadioItems
 
@@ -70,6 +71,8 @@
 
 @layout(pageTitle = messages("responsiblepeople.country.of.birth.title") + " - " + messages("summary.responsiblepeople")) {
 
+    <link rel="stylesheet" href='@controllers.routes.Assets.versioned("autocomplete-polyfill.css")' />
+
     @errorSummary(form, preparedErrorSummaryMapping)
 
     @subtitle("summary.responsiblepeople")
@@ -95,4 +98,6 @@
 
         @returnLink(true)
     }
+    <script @CSPNonce.attr src='@controllers.routes.Assets.versioned("autocomplete-polyfill.js")'></script>
+
 }
