--- a/app/views/renewal/CustomersOutsideUKView.scala.html
+++ b/app/views/renewal/CustomersOutsideUKView.scala.html
@@ -16,6 +16,7 @@
 
 @import views.html.components.forms.{ErrorSummary, InputCountry}
 @import views.html.components.{SectionSubtitle, Heading, Button, ReturnLink}
+@import views.html.helper.CSPNonce
 
 @this(
     layout: Layout,
@@ -51,6 +52,7 @@
 @layout(
     pageTitle = messages("renewal.customer.outside.uk.countries.title") + " - " + messages("summary.renewal")
 ) {
+    <link rel="stylesheet" href='@controllers.routes.Assets.versioned("autocomplete-polyfill.css")' />
 
     @errorSummary(preparedForm, preparedErrorSummaryMapping)
 
@@ -78,4 +80,5 @@
 
         @returnLink(true, Some("renewal"))
     }
+    <script @CSPNonce.attr src='@controllers.routes.Assets.versioned("autocomplete-polyfill.js")'></script>
 }
