--- a/app/views/renewal/MostTransactionsView.scala.html
+++ b/app/views/renewal/MostTransactionsView.scala.html
@@ -16,6 +16,7 @@
 
 @import views.html.components.forms.{ErrorSummary, InputCountry}
 @import views.html.components.{SectionSubtitle, Heading, Button, ReturnLink}
+@import views.html.helper.CSPNonce
 
 @this(
     layout: Layout,
@@ -51,6 +52,7 @@
 @layout(
     pageTitle = messages("renewal.msb.most.transactions.title") + " - " + messages("summary.renewal")
 ) {
+    <link rel="stylesheet" href='@controllers.routes.Assets.versioned("autocomplete-polyfill.css")' />
 
     @errorSummary(preparedForm, preparedErrorSummaryMapping)
 
@@ -76,4 +78,5 @@
 
         @returnLink(true, Some("renewal"))
     }
+    <script @CSPNonce.attr src='@controllers.routes.Assets.versioned("autocomplete-polyfill.js")'></script>
 }
