--- a/app/views/renewal/SendLargestAmountsOfMoneyView.scala.html
+++ b/app/views/renewal/SendLargestAmountsOfMoneyView.scala.html
@@ -15,6 +15,7 @@
  *@
 
 @import views.html.components.forms.{ErrorSummary, InputCountry}
+@import views.html.helper.CSPNonce
 @import views.html.components.{SectionSubtitle, Heading, Button, ReturnLink}
 
 @this(
@@ -51,6 +52,7 @@
 @layout(
     pageTitle = messages("renewal.msb.largest.amounts.title") + " - " + messages("summary.renewal")
 ) {
+    <link rel="stylesheet" href='@controllers.routes.Assets.versioned("autocomplete-polyfill.css")' />
 
     @errorSummary(preparedForm, preparedErrorSummaryMapping)
 
@@ -76,4 +78,5 @@
 
         @returnLink(true, Some("renewal"))
     }
+    <script @CSPNonce.attr src='@controllers.routes.Assets.versioned("autocomplete-polyfill.js")'></script>
 }
