--- a/app/views/businessmatching/PsrNumberView.scala.html
+++ b/app/views/businessmatching/PsrNumberView.scala.html
@@ -85,8 +85,8 @@ field = form("regNumber")
 
 @supportingContent = {
 <div>
-    <p class="govuk-hint">@messages("businessmatching.psr.number.hint")</p>
-    <p class="govuk-hint">@messages("businessmatching.psr.number.hint2")</p>
+    <p class="govuk-body">@messages("businessmatching.psr.number.hint")</p>
+    <p class="govuk-body">@messages("businessmatching.psr.number.hint2")</p>
 </div>
 }
 
@@ -111,11 +111,15 @@ content = Text(messages("businessmatching.psr.warning"))
 
 <input type="hidden" name="appliedFor" value=true />
 
+<p class="govuk-body">@messages("businessmatching.psr.number.hint")</p>
+<p class="govuk-body">@messages("businessmatching.psr.number.hint2")</p>
+
 @inputText(
 input = Input(
-hint = Some(
-Hint(
-content = HtmlContent(supportingContent))
+label = Label(
+isPageHeading = false,
+content = Text(messages("businessmatching.updateservice.psr.number.lbl2")),
+classes = "govuk-label govuk-label--m"
 ),
 name = "regNumber",
 id = "regNumber",
