DDCYLS-5812 - Adding label to input field & changing hint into paragraph (#1707)
* Converting the hint's on view to paragraphs and linking new label to input field.

* reverting change i made when testing

* reverting change i made when testing

* Removing app json logger as this is provided within the bootstrap update - Recommended by PR bot

--- a/app/views/businessmatching/PsrNumberView.scala.html
+++ b/app/views/businessmatching/PsrNumberView.scala.html
@@ -111,11 +111,15 @@ content = Text(messages("businessmatching.psr.warning"))
 
 <input type="hidden" name="appliedFor" value=true />
 
+<p class="govuk-body">@messages("businessmatching.psr.number.hint")</p>
+<p class="govuk-body">@messages("businessmatching.psr.number.hint2")</p>
+
 @inputText(
 input = Input(
-hint = Some(
-Hint(
-content = HtmlContent(supportingContent))
+label = Label(
+isPageHeading = false,
+content = Text(messages("businessmatching.updateservice.psr.number.lbl2")),
+classes = "govuk-label govuk-label--m"
 ),
 name = "regNumber",
 id = "regNumber",
