don't show back button

--- a/app/views/deregister/DeregistrationConfirmationView.scala.html
+++ b/app/views/deregister/DeregistrationConfirmationView.scala.html
@@ -39,7 +39,10 @@
     <strong>@amlsRefNumber</strong>
 }
 
-@layout(messages("deregistration.confirmation.youhavederegistered") + " - " + messages("title.yapp")) {
+@layout(
+    pageTitle = messages("deregistration.confirmation.youhavederegistered") + " - " + messages("title.yapp"),
+    showBackLink = false
+) {
 
     @govukPanel(
         Panel(
